# policy-tlb

./: .clangd  .gitignore  LICENSE  Makefile  README-ko.md  README.md  REUSE.toml  config.mk.in  configure  configure.ac
bpf/: l1_fast_path.bpf.c  l2_semi_fast_path.bpf.c  l3_slow_path.bpf.c  maps.bpf.h  mcp_guard.bpf.c
docs/: LICENSE_POLICY.md  gui-development-guide-ko.md  gui-development-guide.md  loader-development-guide-ko.md  loader-development-guide.md
examples/: fake_mcp_agent.py
experiments/: DESIGN.md  README.md  VARIABLE_CONTROL.md
experiments/baselines/: .gitignore  README.md  run_baseline_suite.sh
experiments/baselines/naive_ebpf_lsm/: build.sh  naive_guard.bpf.c  naive_guard_loader.c
experiments/baselines/ptrace_monitor/: build.sh  ptrace_monitor.c
experiments/baselines/tools/: analyze_baselines.py
experiments/baselines/workloads/: baseline_file_io_workload.c  baseline_workload.py
experiments/config/: experiment.env
experiments/scripts/: clean_experiment_state.sh  collect_env.sh  common.sh  preflight_check.sh  restore_cpu_mode.sh  run_all.sh  run_end_to_end_benchmark.sh  run_hit_ratio_benchmark.sh  run_latency_benchmark.sh  run_lpm_trie_benchmark.sh  run_reload_benchmark.sh  set_performance_mode.sh
experiments/templates/: experiment_report_template.md  paper_experiment_section_template.md
experiments/tools/: analyze_results.py  generate_tables.py  parse_metrics.py  summarize_env.py
experiments/workloads/: exec_workload.sh  file_io_workload.sh  mixed_agent_workload.py  socket_workload.py
gui/: README.md  requirements.txt  run_gui.py
gui/mcp_guard_gui/: __init__.py  alert_popup.py  app.py  main_window.py  models.py  resources.py  socket_client.py
gui/resources/: style.qss
gui/samples/: events.ndjson
include/: cache_key.h  common.h  event.h  policy.h
libmcpguard/: README.md
loader/: bpf_loader.c  bpf_loader.h  main.c  policy_loader.c  policy_loader.h  ringbuf_reader.c  ringbuf_reader.h  unix_socket_server.c  unix_socket_server.h
policies/: dangerous_commands.json  dangerous_network.json  dangerous_paths.json  default_policy.json  mcp_agent_profile.json
scripts/: generate_vmlinux.sh  test_attack.sh
tests/: test_agent_scope.sh  test_atomic_reload.sh  test_execve.sh  test_file_access.sh  test_l1_cache.sh  test_l2_flags_cache.sh  test_metrics_snapshot.sh  test_path_lpm_trie.sh  test_policy_update.sh  test_socket_connect.sh
